# voice_assistant

./: .gitignore  README.md  makefile  pylintrc  pyproject.toml
executor/: run.py
helper/: __init__.py  helper_cli.py  settings.py
intents/: __init__.py  intent.json  intent_controller.py  intents_functions.py  settings.py
logger/: __init__.py  logger.py
rugpt3/: __init__.py  gpt3.py  settings.py
tts/: __init__.py  settings.py  text_to_speech.py
